add docker service config module

--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,18 @@
             <artifactId>velocity</artifactId>
             <version>1.7</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/com.github.docker-java/docker-java -->
+        <dependency>
+            <groupId>com.github.docker-java</groupId>
+            <artifactId>docker-java</artifactId>
+            <version>3.2.7</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.docker-java/docker-java-transport-httpclient5 -->
+        <dependency>
+            <groupId>com.github.docker-java</groupId>
+            <artifactId>docker-java-transport-httpclient5</artifactId>
+            <version>3.2.7</version>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
