add SSHService replaced system ssh cmd

--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,13 @@
             <artifactId>docker-java-transport-httpclient5</artifactId>
             <version>3.2.7</version>
         </dependency>
+        <!-- SSH-->
+        <!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.55</version>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
