--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
                 <artifactId>fastjson</artifactId>
                 <version>1.2.76</version>
         </dependency>
+        <!-- mysql服务驱动依赖-->
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
                 <groupId>mysql</groupId>
@@ -66,6 +67,7 @@
                 <version>8.0.24</version>
                 <scope>runtime</scope>
         </dependency>
+        <!-- redis服务依赖-->
         <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
         <dependency>
                 <groupId>redis.clients</groupId>
@@ -85,11 +87,12 @@
             <version>2.0.0-alpha1</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
-        <dependency>
+        <!--dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>5.6.6</version>
-        </dependency>
+        </dependency-->
+        <!-- mail服务依赖-->
         <!-- https://mvnrepository.com/artifact/javax.mail/mail -->
         <dependency>
             <groupId>javax.mail</groupId>
@@ -103,7 +106,7 @@
             <version>1.18.20</version>
             <scope>provided</scope>
         </dependency>
-        <!--Velocity模板引擎-->
+        <!--Velocity服务依赖-->
         <!-- https://mvnrepository.com/artifact/org.apache.velocity/velocity -->
         <dependency>
             <groupId>org.apache.velocity</groupId>
@@ -116,18 +119,26 @@
             <artifactId>docker-java</artifactId>
             <version>3.2.7</version>
         </dependency>
+        <!-- Docker服务依赖-->
         <!-- https://mvnrepository.com/artifact/com.github.docker-java/docker-java-transport-httpclient5 -->
         <dependency>
             <groupId>com.github.docker-java</groupId>
             <artifactId>docker-java-transport-httpclient5</artifactId>
             <version>3.2.7</version>
         </dependency>
-        <!-- SSH-->
+        <!-- SSH服务依赖-->
         <!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
         <dependency>
             <groupId>com.jcraft</groupId>
             <artifactId>jsch</artifactId>
             <version>0.1.55</version>
+        </dependency>
+        <!-- Redis服务依赖，jedis pool需要，默认的GenericObjectPoolConfig没有泛型参数-->
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.10.0</version>
         </dependency>
     </dependencies>
     <profiles>
